<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF2F7"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">


    <!-- Avatar -->
    <FrameLayout
        android:id="@+id/frame_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar_voisin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop">

        </ImageView>

        <TextView
            android:id="@+id/nom_voisin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="20dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp">

        </TextView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/avatar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

        </android.support.v7.widget.Toolbar>

    </FrameLayout>

    <!-- Fin Avatar -->


    <!-- Les cardViews -->

    <android.support.v7.widget.CardView
        android:id="@+id/first_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_view_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:textSize="20sp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="#DDDDDD">

            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/baseline_room_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Saint pierre du mont à 5km">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/round_local_phone_24">

                </ImageView>

                <TextView
                    android:id="@+id/numero_voisin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/round_language_24">

                </ImageView>


                <TextView
                    android:id="@+id/nom_voisin_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>
        <!-- Fin du placement des icônes et coordonnées-->
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="A propos de moi"
                android:textColor="#000000"
                android:textSize="20sp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DDDDDD">

            </View>

            <TextView
                android:id="@+id/a_propos_neighbour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp">

            </TextView>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--Floating Button -->


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_avatar_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@android:color/white"
        android:elevation="10dp"
        android:src="@drawable/ic_star_white_24dp"
        app:layout_constraintBottom_toBottomOf="@id/frame_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_top">

    </android.support.design.widget.FloatingActionButton>
    <!-- Fin floating button -->
    <!-- Fin 2ème partie -->

    <!-- Fin CardViews -->
</android.support.constraint.ConstraintLayout>